--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -70,6 +70,7 @@
     left: -200rem;
     opacity: 0;
     width: 0;
+    animation: fixNavAnim 1s;
     transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);     // http://cubic-bezier.com/ , https://easings.net/
   }
 
